manifests/system/nginx-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
  labels:
    app.kubernetes.io/managed-by: company-as-code
